[ILWHackCincy2018-37] Load Meetups

--- a/client/src/app/raid-description/raid-description.component.html
+++ b/client/src/app/raid-description/raid-description.component.html
@@ -1,12 +1,12 @@
 <div class="card">
 	<div id="Header-MEATupID-12345" class="bg-secondary">
-    <button class="btn btn-block btn-secondary collapsed" type="button" data-toggle="collapse" data-target="#Collapse-MEATupID-12345" aria-expanded="false" aria-controls="Collapse-MEATupID-12345">
-      A Tasty MEATup Name<br />
-      <span class="badge badge-light">1d 4h 15m <i class="far fa-clock"></i></span>&nbsp;&nbsp;&nbsp;<span class="badge badge-light">4/5 <i class="fas fa-user"></i></span>
+    <button class="btn btn-block btn-secondary collapsed" type="button" data-toggle="collapse" [attr.data-target]="'#'+meatup.ownerId" aria-expanded="false" [attr.aria-controls]="meatup.ownerId">
+      {{meatup.name}}<br />
+      <span class="badge badge-light">1d 4h 15m <i class="far fa-clock"></i></span>&nbsp;&nbsp;&nbsp;<span class="badge badge-light">{{meatup.attendees.length}}/{{meatup.maxChefs}} <i class="fas fa-user"></i></span>
     </button>
   </div>
 
-  <div id="Collapse-MEATupID-12345" class="collapse" aria-labelledby="Header-MEATupID-12345"
+  <div [attr.id]="meatup.ownerId" class="collapse" aria-labelledby="Header-MEATupID-12345"
        data-parent="#activeRaidsList">
     <div class="card-body">
       <h6>
