[ILWHackCincy2018-37] Load Meetups

--- a/client/src/app/raid-description/raid-description.component.html
+++ b/client/src/app/raid-description/raid-description.component.html
@@ -4,7 +4,7 @@
                 [attr.data-target]="'#'+meatup.id" aria-expanded="false" [attr.aria-controls]="meatup.id">
             {{meatup.name}}<br/>
             <span class="badge badge-light">1d 4h 15m <i class="far fa-clock"></i></span>&nbsp;&nbsp;&nbsp;<span
-                class="badge badge-light">{{meatup.attendees.length}}/{{meatup.maxChefs}} <i
+                class="badge badge-light">{{meatup.attendeesCount}}/{{meatup.maxChefs}} <i
                 class="fas fa-user"></i></span>
         </button>
     </div>
