--- a/client/src/app/meatup-page/meatup-page.component.html
+++ b/client/src/app/meatup-page/meatup-page.component.html
@@ -1,21 +1,3 @@
-<!-- Begin Edit section: only visible to owner, and only editable until start time -->
-<p>
-  <button class="btn btn-block btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#newRaid" aria-expanded="false" aria-controls="newRaid">
-    Modify MEATup
-  </button>
-</p>
-
-<div class="collapse" id="newRaid">
-  <div class="card card-body">
-    <button class="btn btn-block btn-danger" type="button" data-toggle="collapse" data-target="#newRaid" aria-expanded="false" aria-controls="newRaid">
-      Cancel Event
-    </button>
-    <app-create-raid>
-    </app-create-raid>
-  </div>
-</div>
-<!-- END Edit Section -->
-
 <h3>
   A Tasty MEATup
 </h3>
@@ -31,13 +13,13 @@
 
 <ul class="list-group">
   <li class="list-group-item">
-    Bill Bull <span class="badge badge-success">Owner</span>
+    Bill Bull <span class="badge badge-success">Judge</span>
   </li>
   <li class="list-group-item">
-    Sally Dollar <span class="badge badge-danger">Judge</span>
+    Sally Dollar <span class="badge badge-info">Chef</span>
   </li>
   <li class="list-group-item">
-    Ralph Malf <span class="badge badge-info">Judge</span>
+    Ralph Malf <span class="badge badge-info">Chef</span>
   </li>
 </ul>
 
@@ -49,20 +31,7 @@
   Possum Pasta
 </p>
 
-<h4>
-  Ingredients
-</h4>
-
-<app-ingredients-list>
-</app-ingredients-list>
-
-<!-- Section only appears during preparation phase -->
-<h4>
-  Protien Locator
-</h4>
-
-<app-road-kill-locator>
-</app-road-kill-locator>
+<app-dish [roadKillFromDb]="items"></app-dish>
 
 <!-- Section only appears during judgement phase and closed phase -->
 <h4>
@@ -71,6 +40,33 @@
 
 <app-dish-judgement>
 </app-dish-judgement>
+
+<p style="margin-top:15px;">
+  <button class="btn btn-block btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#newDish" aria-expanded="false" aria-controls="newDish">
+    Add My Dish
+  </button>
+</p>
+
+<div class="collapse" id="newDish">
+  <div class="card card-body">
+    <form>
+      <div class="form-group">
+        <label for="DishName">Dish Name</label>
+        <input type="email" class="form-control" id="DishName" placeholder="Enter the name of your dish">
+      </div>
+      <div class="input-group">
+        <div class="custom-file">
+          <label class="custom-file-label" for="DishImage">Photo of Your Dish</label>
+          <input type="file" class="custom-file-input" id="DishImage" aria-describedby="DishImageAddon">
+          <div class="input-group-append">
+            <span class="input-group-text" id="DishImageAddon">Browse</span>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary" style="margin-top:15px;">Add Dish</button>
+    </form>
+  </div>
+</div>
 
 <h4>
   Event Photos
