--- a/client/src/app/road-kill-locator/road-kill-locator.component.html
+++ b/client/src/app/road-kill-locator/road-kill-locator.component.html
@@ -1,3 +1,12 @@
+<form>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Enter Your Starting Address" aria-label="StartAddress" aria-describedby="StartAddress" #address/>
+    <div class="input-group-append">
+      <button class="btn btn-outline-secondary" type="button" id="StartAddress" (click)="setLocation(address.value)">Set Start Point</button>
+    </div>
+  </div>
+</form>
+
 <agm-map *ngIf="roadKills !== []" [latitude]="mapCenter.latitude" [longitude]="mapCenter.longitude" [zoom]="11">
   <agm-marker *ngFor="let roadKill of roadKills"
               [label]="roadKill.species[0]"
@@ -10,12 +19,6 @@
     </agm-info-window>
   </agm-marker>
 </agm-map>
-<div>
-  <form>
-    <input type="text" #address/>
-    <button (click)="setLocation(address.value)">Set Location</button>
-  </form>
-</div>
 
 <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#RoadkillMapFilter" aria-expanded="false" aria-controls="RoadkillMapFilter">
   Filter Roadkill
