--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,55 +1,47 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div *ngIf="afAuth.user | async as user; else showLogin">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <div class="navbar-brand">Hello {{ user.displayName }}!</div>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="navbar-brand">Hello {{ user.displayName }}!</div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-auto">
-	      <li class="nav-item">
-	        <a uiSref="home" uiSrefActive="active" class="nav-link">Home</a>
-	      </li>
-	      <li class="nav-item dropdown">
-	        <a class="nav-link dropdown-toggle" href="#" id="MyMEATups" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" (click)="create()">
-	          My MEATups
-	        </a>
-	        <div class="dropdown-menu" aria-labelledby="MyMEATups">
-	          <a uiSref="meat-up" class="dropdown-item" uiSrefActive="active">A Tasty MEATup <span class="badge badge-success">Owner</span></a>
-	          <a class="dropdown-item" href="#">Another MEATup <span class="badge badge-danger">Judge</span></a>
-				<ul>
-					<li class="dropdown-item" *ngFor="let item of myRaids">
-						<a class="dropdown-item" href="#">{{item.meatupName}}
-              <span *ngIf="item.isOwner" class="badge badge-success">Judge</span>
-              <span *ngIf="!item.isOwner" class="badge badge-info">Chef</span>
-            </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a uiSref="home" uiSrefActive="active" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="MyMEATups" role="button" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false" (click)="gotClicked()">
+                        My MEATups
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="MyMEATups">
+                        <a *ngFor="let item of myRaids" uiSref="meat-up" [uiParams]="{meat: item}" class="dropdown-item" uiSrefActive="active">{{item.meatupName}}
+                            <span *ngIf="item.isOwner" class="badge badge-success">Judge</span>
+                            <span *ngIf="!item.isOwner" class="badge badge-info">Chef</span>
+                        </a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a uiSref="my-profile" class="nav-link" uiSrefActive="active">My Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a uiSref="high-score" class="nav-link" uiSrefActive="active">High Score</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" (click)="logout()">Log Out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-					</li>
-				</ul>
-	          <a class="dropdown-item" href="#">A Tasty MEATup <span class="badge badge-success">Judge</span></a>
-	          <a class="dropdown-item" href="#">Another MEATup <span class="badge badge-info">Chef</span></a>
-	          <a class="dropdown-item" href="#">The Final MEATup <span class="badge badge-info">Chef</span></a>
-	        </div>
-	      </li>
-	      <li class="nav-item">
-	        <a uiSref="my-profile" class="nav-link" uiSrefActive="active">My Profile</a>
-	      </li>
-				<li class="nav-item">
-					<a uiSref="high-score" class="nav-link" uiSrefActive="active">High Score</a>
-				</li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#" (click)="logout()">Log Out</a>
-	      </li>
-	    </ul>
-	  </div>
-	</nav>
-
-	<div class="col-sm-12 col-md-8 offset-md-2">
-		<ui-view></ui-view>
-	</div>
+    <div class="col-sm-12 col-md-8 offset-md-2">
+        <ui-view></ui-view>
+    </div>
 
 </div>
-		<ng-template #showLogin>
-		    <app-login (change)="login()"></app-login>
-		</ng-template>
+<ng-template #showLogin>
+    <app-login (change)="login()"></app-login>
+</ng-template>
