Fixed Buda's subheading and the map

--- a/client/src/app/title-screen/title-screen.component.html
+++ b/client/src/app/title-screen/title-screen.component.html
@@ -1,7 +1,7 @@
 <img class="img-fluid mx-auto d-block" src="assets/images/meat-up-logo.png" alt="Meetup Logo"/>
 
 <h2 class="text-center">
-  {{randomTitleText()}}
+  {{subHeading}}
 </h2>
 
 <!-- BEGIN Start New Section, Only visible if not currently an owner of any MEATup -->
