--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,7 +14,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="MyMEATups" role="button" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false" (click)="gotClicked()">
+                       aria-haspopup="true" aria-expanded="false">
                         My MEATups
                     </a>
                     <div class="dropdown-menu" aria-labelledby="MyMEATups">
