Styles and Images

--- a/client/src/app/title-screen/title-screen.component.html
+++ b/client/src/app/title-screen/title-screen.component.html
@@ -1,6 +1,6 @@
 <img class="img-fluid mx-auto d-block" src="assets/images/meat-up-logo.png" alt="Meetup Logo"/>
 
-<h2 class="text-center">
+<h2 class="text-center pulsate">
   {{subHeading}}
 </h2>
 
