--- a/client/src/app/road-kill-locator/road-kill-locator.component.html
+++ b/client/src/app/road-kill-locator/road-kill-locator.component.html
@@ -1,6 +1,6 @@
 <agm-map *ngIf="roadKills !== []" [latitude]="mapCenter.latitude" [longitude]="mapCenter.longitude" [zoom]="11">
   <agm-marker *ngFor="let roadKill of roadKills"
-              [iconUrl]="'assets/images/icons/meat_2.png'"
+              [iconUrl]="setIcon(roadKill.species)"
               [latitude]="roadKill.geocoord._lat"
               [longitude]="roadKill.geocoord._long">
     <agm-info-window>
@@ -14,7 +14,7 @@
 <div>
   <form>
     <input type="text" #address/>
-    <button (click)="setLocation(address.value)">Set Location</button>
+    <button (click)="setLocation(address.value)" class="btn brn-block btn-primary">Set Location</button>
   </form>
 </div>
 
