--- a/client/src/app/create-raid/create-raid.component.html
+++ b/client/src/app/create-raid/create-raid.component.html
@@ -38,7 +38,7 @@
   <div class="form-group">
     <label for="Ingredients">Required Ingredients</label>
     <div class="input-group">
-      <input
+      <!--<input
         type="text"
         id="Ingredients"
         class="form-control"
@@ -49,11 +49,37 @@
       <div class="input-group-append">
         <button class="btn btn-secondary" type="button" id="button-AddIngredient">+</button>
       </div>
+      -->
+
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" name="ingredients[]" value="FunkyBleuCheese" id="FunkyBleuCheese">
+        <label class="form-check-label" for="FunkyBleuCheese">
+          Funky Bleu Cheese
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" name="ingredients[]" value="RockSalt" id="RockSalt">
+        <label class="form-check-label" for="RockSalt">
+          Rock Salt
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" name="ingredients[]" value="ExoticKentuckyHerbs" id="ExoticKentuckyHerbs">
+        <label class="form-check-label" for="ExoticKentuckyHerbs">
+          Exotic Kentucky Herbs
+        </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" name="ingredients[]" value="Beer" id="Beer">
+        <label class="form-check-label" for="Beer">
+          Beer
+        </label>
+      </div>
     </div>
     <small
       id="IngredientHelpBlock"
       class="form-text text-muted">
-      Add all of the ingredients that you want to be required for the dish.
+      Select all of the ingredients that you want to be required for the dish.
     </small>
   </div>
   <div class="form-group">
